# nekoerp

./: .gitignore
auth/: Cargo.toml  docker-compose.yaml  example.env  k8s.yaml  main.tf
auth/src/: lib.rs
auth/src/api/: prelude.rs
auth/src/api/user/: mod.rs  prelude.rs
auth/src/api/user/application/: dto.rs  helpers.rs  import.rs  mod.rs  prelude.rs  use_case.rs  use_case_register.rs  use_case_signin.rs  use_case_token.rs
auth/src/api/user/models/: auth.rs  data.rs  import.rs  mod.rs  opt.rs  policy.rs  prelude.rs  transporter.rs
auth/src/models/: prelude.rs
auth/src/models/user/: create.rs  data.rs  mod.rs  policy.rs  prelude.rs  response.rs
auth/tests/: register.rs  signin.rs
backend/: Cargo.toml
client/: Cargo.toml
client/tauri/: Cargo.toml
models/: Cargo.toml
purchasing/: Cargo.toml
user/: Cargo.toml  Dockerfile  LICENSE.md  example.env
user/src/: lib.rs  main.rs
user/src/api/: prelude.rs
user/src/api/user/: mod.rs  prelude.rs
user/src/api/user/application/: dto.rs  import.rs  mod.rs  prelude.rs  use_case.rs  use_case_register.rs  use_case_register_first_user.rs  use_case_signin.rs  use_case_token.rs
user/src/api/user/application/helpers/: import.rs  mod.rs  prelude.rs  user_create_validation.rs  user_register.rs
user/src/api/user/middlewares/: import.rs  log.rs  mod.rs  prelude.rs
user/src/api/user/models/: create.rs  data.rs  import.rs  log.rs  mod.rs  modules.rs  policy.rs  prelude.rs  response.rs
user/src/api/user/repository/: dto.rs  im.rs
user/src/api/user/services/: service.rs
user/tests/: register.rs
(+5 files in other folders)
