[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0", features = ["std"] }
async-trait = "0.1.89"
axum = "0"
bincode = "2"
chrono = { version = "0", features = ["serde"]}
colorful = "0.3.2"
dotenv = "0.15.0"
hex = "0"
kenzu = "0.1.5"
nekoprint = "0"
nekosearch = "0"
nekotracing = "0"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
zipher = { version = "0.3.0", features = ["argon2"] }


[dev-dependencies]
tower = "0.5.2"
axum = "0"
tokio = { version = "1", features = ["full"] }
